--- a/iframe/web/index.html
+++ b/iframe/web/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>iframe</title>
+  <title>THANK YOU Reward</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
